Fixing spacing

--- a/style.css
+++ b/style.css
@@ -266,6 +266,10 @@ footer ul li a{
         width: 100%;
     }
 
+    .service-row{
+        margin-top: 120px;
+    }
+
     .testimonial .box{
         margin-bottom: 2rem;
     }
@@ -316,7 +320,7 @@ footer ul li a{
     }
 
     footer .sci{
-        width: 40%;
+        width: 250px;
         float: none;
         margin: 0 auto;
         justify-content: space-around;
